...
    <string name="actionbar_search">Search this folder</string>
    <string name="actionbar_search_space">Search spaces</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_open_with_read_only">Open with (read only)</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="fab_new_file">New document</string>
    <string name="fab_new_shortcut">New shortcut</string>
    <string name="fab_new_space">New space</string>
...
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature at your own risk. A malicious application could try to spoof you into unknowingly performing some actions, using other views.</string>
    <string name="prefs_subsection_picture_uploads">Automatic picture uploads</string>
    <string name="prefs_subsection_picture_uploads_summary">Manage location and behavior of the pictures uploaded automatically</string>
    <string name="prefs_subsection_video_uploads">Automatic video uploads</string>
    <string name="prefs_subsection_video_uploads_summary">Manage location and behavior of the videos uploaded automatically</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
    <string name="prefs_camera_picture_upload_conditions_title">Conditions to execute uploads</string>
    <string name="prefs_camera_picture_upload_conditions_summary">Uploads will be triggered when all selected options are fulfilled</string>
    <string name="prefs_camera_picture_upload_on_wifi">Upload pictures via wifi only</string>
    <string name="prefs_camera_picture_upload_on_charging">Upload pictures only when charging</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_camera_video_upload_path_title">Video upload path</string>
    <string name="prefs_camera_video_upload_on_wifi">Upload videos via wifi only</string>
    <string name="prefs_camera_video_upload_on_charging">Upload videos only when charging</string>
    <string name="prefs_automatic_uploads_not_available_users_light">Automatic uploads are not available for users light</string>
    <string name="prefs_subsection_advanced">Advanced</string>
    <string name="prefs_subsection_notifications">Manage notifications</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_show_disabled_spaces">Show disabled spaces</string>
...
    <string name="filedetails_download">Download</string>
    <string name="filedetails_file_image_content_description">File Image</string>
    <string name="filedetails_cancel_btn_content_description">Cancel download button</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="action_share">Share</string>
    <string name="login_account_preparing">Preparing account for first launch</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_loading">Loading…</string>
    <string name="common_error_unknown">unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="common_important">Important</string>
...
    <string name="file_list__footer__file_and_folders">1 file, %1$d folders</string>
    <string name="file_list__footer__files">%1$d files</string>
    <string name="file_list__footer__files_and_folder">%1$d files, 1 folder</string>
    <string name="file_list__footer__files_and_folders">%1$d files, %2$d folders</string>
    <string name="prefs_picture_upload_account">Account to upload pictures</string>
    <string name="prefs_video_upload_account">Account to upload videos</string>
    <string name="prefs_camera_upload_source_path_title">Camera folder (%1$s)</string>
    <string name="prefs_camera_upload_source_path_title_required">required</string>
    <string name="prefs_camera_upload_behaviour_dialog_title">Original file will be</string>
    <string name="prefs_camera_upload_behaviour_title">Original file will be</string>
    <string name="prefs_camera_upload_last_sync_title">Last synchronization</string>
    <string name="notifications_permission_denied">You can update your preferences in Settings</string>

    <string name="pref_behaviour_entries_keep_file">kept in original folder</string>
    <string name="pref_behaviour_entries_remove_original_file">removed from original folder</string>

    <string name="share_dialog_title">Share</string>
    <string name="share_with_user_section_title">Users and Groups</string>
    <string name="share_no_users">No data shared with users yet</string>
    <string name="share_sync_failed">Shares could not be refreshed</string>
...
