<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application

  Copyright (C) 2016 ownCloud GmbH.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="empty" />

    <string-array name="pref_behaviour_entries">
        <item>@string/pref_behaviour_entries_keep_file</item>
        <item>@string/pref_behaviour_entries_move</item>
    </string-array>

    <string-array name="pref_behaviour_entryValues">
        <item>NOTHING</item>
        <item>MOVE</item>
    </string-array>

    <!-- Entries in dialog to choose sorting criteria -->
    <string-array name="actionbar_sort_by_options">
        <item>@string/actionbar_sort_by_name</item>
        <item>@string/actionbar_sort_by_date</item>
        <item>@string/actionbar_sort_by_size</item>
    </string-array>

</resources>