<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2016 ownCloud GmbH.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    android:filterTouchesWhenObscured="true"
    >


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_code_enter_pass_code"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:textSize="16sp"
         />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_code_configure_your_pass_code_explanation"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:gravity="center_horizontal"
        android:textSize="14sp"
         />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/txt0"
            android:focusable="true"
            style="@style/PassCodeStyle"
            android:cursorVisible="true"
            android:imeOptions="flagNoExtractUi"
            ><requestFocus/></EditText>

        <EditText
            android:id="@+id/txt1"
            style="@style/PassCodeStyle"
            android:cursorVisible="true"
            android:imeOptions="flagNoExtractUi"
            />

        <EditText
            android:id="@+id/txt2"
            style="@style/PassCodeStyle"
            android:cursorVisible="true"
            android:imeOptions="flagNoExtractUi"
            />

        <EditText
            android:id="@+id/txt3"
            style="@style/PassCodeStyle"
            android:cursorVisible="true"
            android:imeOptions="flagNoExtractUi"
            />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancel"
        android:theme="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel" />

</LinearLayout>
