...
    <string name="foreign_files_fail">Some files could not be moved</string>
    <string name="foreign_files_local_text">Local: %1$s</string>
    <string name="foreign_files_remote_text">Remote: %1$s</string>
    <string name="upload_query_move_foreign_files">There is not enough space to copy the selected files into the %1$s folder. Would you like to move them instead? </string>

    <string name="pass_code_enter_pass_code">Please insert your passcode</string>
    <string name="pass_code_configure_your_pass_code">Enter your passcode</string>
    <string name="pass_code_configure_your_pass_code_explanation">The passcode will be requested every time the app is started</string>
    <string name="pass_code_reenter_your_pass_code">Please reenter your passcode</string>
    <string name="pass_code_remove_your_pass_code">Remove your passcode</string>
    <string name="pass_code_mismatch">The passcodes are not the same</string>
    <string name="pass_code_wrong">Incorrect passcode</string>
    <string name="pass_code_removed">Passcode removed</string>
    <string name="pass_code_stored">Passcode stored</string>

    <string name="fingerprint_confirm">Confirm your fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
...
